--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <div class="title-container">
     <a mat-button (click)="mute()" class="mute-button">
-      <img [src]="_mute ? '/assets/buttons/sound-off.jpg' : '/assets/buttons/sound-on.jpg'" />
+      <img [src]="_mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
     </a>
     <span>PLAY</span>
   </div>
@@ -13,10 +13,10 @@
   </div>
   <div class="footer-menu">
     <a mat-button (click)="stop()" class="stop-button">
-      <img src="/assets/buttons/close.jpg" />
+      <img src="assets/buttons/close.jpg" />
     </a>
     <a mat-button (click)="pause()" class="pause-button">
-      <img [src]="_pause ? '/assets/buttons/sound-play.jpg' : '/assets/buttons/sound-pause.jpg'" />
+      <img [src]="_pause ? 'assets/buttons/sound-play.jpg' : 'assets/buttons/sound-pause.jpg'" />
     </a>
   </div>
 </div>
