--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -37,8 +37,9 @@ cursive;
   }
 
   .mute-button {
-    width: 75px;
-    height: 75px;
+    min-width: 0;
+    width: 8vh;
+    height: auto;
     position: relative;
     top: 10px;
     left: 10px;
@@ -61,12 +62,13 @@ cursive;
   .center-card {
     margin: auto;
     width: 80%;
-    height: 200px;
+    height: 20vh;
 
     img {
       display: block;
-      width: 200px;
-      height: 200px;
+      min-width: 0;
+      height: 20vh;
+      width: auto;
       margin: auto;
       margin-bottom: 20px;
     }
@@ -85,8 +87,9 @@ cursive;
   height: 150px;
 
   .stop-button {
-    width: 100px;
-    height: 100px;
+    min-width: 0;
+    width: 8vh;
+    height: auto;
     position: absolute;
     bottom: 25px;
     left: 25px;
@@ -98,8 +101,9 @@ cursive;
   }
 
   .pause-button {
-    width: 100px;
-    height: 100px;
+    min-width: 0;
+    width: 8vh;
+    height: auto;
     position: absolute;
     bottom: 25px;
     right: 25px;
