--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <div class="title-container">
     <a mat-button (click)="muteButton()" class="mute-button">
-      <img [src]="_mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
+      <img [src]="settings.mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
     </a>
     <span>MENU</span>
   </div>
@@ -9,46 +9,50 @@
     <a mat-button class="character-row good">
       <img class="portrait" src="assets/characters/loyal-servant.jpg" />
       <span class="name">Loyal Servant</span>
-      <span class="number">{{ _servantNumber }}</span>
+      <span class="number">{{ servants }}</span>
     </a>
     <a mat-button class="character-row good">
       <img class="portrait" src="assets/characters/merlin.jpg" />
       <span class="name">Merlin</span>
     </a>
-    <a mat-button class="character-row good" (click)="toggleCharacter('morgana')">
+    <a mat-button class="character-row good" (click)="toggleCharacter(Characters.Percival)">
       <img class="portrait" src="assets/characters/percival.jpg" />
-      <span class="name" [ngClass]="{ strikethrough: !_characters['morgana'] }">Percival</span>
-      <img class="enabled" [src]="_characters['morgana'] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+      <span class="name" [ngClass]="{ strikethrough: !settings.characters[Characters.Percival] }">Percival</span>
+      <img class="enabled"
+        [src]="settings.characters[Characters.Percival] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
     </a>
     <a mat-button class="character-row evil">
       <img class="portrait" src="assets/characters/minion.jpg" />
       <span class="name">Minion of Mordred</span>
-      <span class="number">{{ _minionNumber }}</span>
+      <span class="number">{{ minions }}</span>
     </a>
     <a mat-button class="character-row evil">
       <img class="portrait" src="assets/characters/assassin.jpg" />
       <span class="name">Assassin</span>
     </a>
-    <a mat-button class="character-row evil" (click)="toggleCharacter('morgana')">
+    <a mat-button class="character-row evil" (click)="toggleCharacter(Characters.Morgana)">
       <img class="portrait" src="assets/characters/morgana.jpg" />
-      <span class="name" [ngClass]="{ strikethrough: !_characters['morgana'] }">Morgana</span>
-      <img class="enabled" [src]="_characters['morgana'] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+      <span class="name" [ngClass]="{ strikethrough: !settings.characters[Characters.Morgana] }">Morgana</span>
+      <img class="enabled"
+        [src]="settings.characters[Characters.Morgana] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
     </a>
-    <a mat-button class="character-row evil" (click)="toggleCharacter('mordred')">
+    <a mat-button class="character-row evil" (click)="toggleCharacter(Characters.Mordred)">
       <img class="portrait" src="assets/characters/mordred.jpg" />
-      <span class="name" [ngClass]="{ strikethrough: !_characters['mordred'] }">Mordred</span>
-      <img class="enabled" [src]="_characters['mordred'] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+      <span class="name" [ngClass]="{ strikethrough: !settings.characters[Characters.Mordred] }">Mordred</span>
+      <img class="enabled"
+        [src]="settings.characters[Characters.Mordred] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
     </a>
-    <a mat-button class="character-row evil" (click)="toggleCharacter('oberon')">
+    <a mat-button class="character-row evil" (click)="toggleCharacter(Characters.Oberon)">
       <img class="portrait" src="assets/characters/oberon.jpg" />
-      <span class="name" [ngClass]="{ strikethrough: !_characters['oberon'] }">Oberon</span>
-      <img class="enabled" [src]="_characters['oberon'] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+      <span class="name" [ngClass]="{ strikethrough: !settings.characters[Characters.Oberon] }">Oberon</span>
+      <img class="enabled"
+        [src]="settings.characters[Characters.Oberon] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
     </a>
   </div>
   <div class="footer-menu">
     <a mat-button (click)="openPlayerDialog()" class="player-button">
       <img class="player-button-image" src="assets/buttons/player-dialog.jpg" />
-      <span class="player-button-text">{{ _playerNumber }}</span>
+      <span class="player-button-text">{{ settings.players }}</span>
     </a>
     <a mat-button (click)="play()" class="play-button">
       <img src="assets/buttons/play.jpg" />
