--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,14 +1,14 @@
 <div class="app-container">
   <div class="title-container">
     <a mat-button (click)="mute()" class="mute-button">
-      <img [src]="_mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
+      <img [src]="settings.mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
     </a>
     <span>PLAY</span>
   </div>
   <div class="centre-container">
     <div class="center-card">
-      <img [src]="_cardImage" />
-      <span>{{ _cardText }}</span>
+      <img [src]="cardImage" />
+      <span>{{ cardText }}</span>
     </div>
   </div>
   <div class="footer-menu">
@@ -16,7 +16,7 @@
       <img src="assets/buttons/close.jpg" />
     </a>
     <a mat-button (click)="pause()" class="pause-button">
-      <img [src]="_pause ? 'assets/buttons/sound-play.jpg' : 'assets/buttons/sound-pause.jpg'" />
+      <img [src]="paused ? 'assets/buttons/sound-play.jpg' : 'assets/buttons/sound-pause.jpg'" />
     </a>
   </div>
 </div>
