--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,64 +1,64 @@
 <div class="app-container">
   <div class="title-container">
     <a mat-button (click)="muteButton()" class="mute-button">
-      <img [src]="settings.mute ? 'assets/buttons/sound-off.jpg' : 'assets/buttons/sound-on.jpg'" />
+      <img [src]="settings.mute ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'" />
     </a>
     <span>MENU</span>
   </div>
   <div class="character-list">
     <a mat-button class="character-row good">
-      <img class="portrait" src="assets/characters/loyal-servant.jpg" />
+      <img class="portrait" src="assets/characters/loyal-servant.png" />
       <span class="name">Loyal Servant</span>
       <span class="number">{{ servants }}</span>
     </a>
     <a mat-button class="character-row good">
-      <img class="portrait" src="assets/characters/merlin.jpg" />
+      <img class="portrait" src="assets/characters/merlin.png" />
       <span class="name">Merlin</span>
     </a>
     <a mat-button class="character-row good" (click)="toggleCharacter(character.Morgana)">
-      <img class="portrait" src="assets/characters/percival.jpg" />
+      <img class="portrait" src="assets/characters/percival.png" />
       <span class="name" [ngClass]="{ strikethrough: !settings.characters[character.Morgana] }">Percival</span>
       <img class="enabled"
-        [src]="settings.characters[character.Morgana] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+        [src]="settings.characters[character.Morgana] ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'" />
     </a>
     <a mat-button class="character-row evil">
-      <img class="portrait" src="assets/characters/minion.jpg" />
+      <img class="portrait" src="assets/characters/minion.png" />
       <span class="name">Minion of Mordred</span>
       <span class="number">{{ minions }}</span>
     </a>
     <a mat-button class="character-row evil">
-      <img class="portrait" src="assets/characters/assassin.jpg" />
+      <img class="portrait" src="assets/characters/assassin.png" />
       <span class="name">Assassin</span>
     </a>
     <a mat-button class="character-row evil" (click)="toggleCharacter(character.Morgana)">
-      <img class="portrait" src="assets/characters/morgana.jpg" />
+      <img class="portrait" src="assets/characters/morgana.png" />
       <span class="name" [ngClass]="{ strikethrough: !settings.characters[character.Morgana] }">Morgana</span>
       <img class="enabled"
-        [src]="settings.characters[character.Morgana] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+        [src]="settings.characters[character.Morgana] ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'" />
     </a>
     <a mat-button class="character-row evil" (click)="toggleCharacter(character.Mordred)">
-      <img class="portrait" src="assets/characters/mordred.jpg" />
+      <img class="portrait" src="assets/characters/mordred.png" />
       <span class="name" [ngClass]="{ strikethrough: !settings.characters[character.Mordred] }">Mordred</span>
       <img class="enabled"
-        [src]="settings.characters[character.Mordred] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+        [src]="settings.characters[character.Mordred] ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'" />
     </a>
     <a mat-button class="character-row evil" (click)="toggleCharacter(character.Oberon)">
-      <img class="portrait" src="assets/characters/oberon.jpg" />
+      <img class="portrait" src="assets/characters/oberon.png" />
       <span class="name" [ngClass]="{ strikethrough: !settings.characters[character.Oberon] }">Oberon</span>
       <img class="enabled"
-        [src]="settings.characters[character.Oberon] ? 'assets/buttons/character-on.jpg' : 'assets/buttons/character-off.jpg'" />
+        [src]="settings.characters[character.Oberon] ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'" />
     </a>
   </div>
   <div class="footer-menu">
     <a mat-button (click)="openPlayerDialog()" class="player-button">
-      <img class="player-button-image" src="assets/buttons/player-dialog.jpg" />
+      <img class="player-button-image" src="assets/buttons/player-dialog.png" />
       <span class="player-button-text">{{ settings.playerNumber }}</span>
     </a>
     <a mat-button (click)="play()" class="play-button">
-      <img src="assets/buttons/play.jpg" />
+      <img src="assets/buttons/start.png" />
     </a>
     <a mat-button (click)="openSettingsDialog()" class="settings-button">
-      <img src="assets/buttons/settings.jpg" />
+      <img src="assets/buttons/settings.png" />
     </a>
   </div>
 </div>
