Add new menu styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,9 @@ body {
 .strikethrough {
   text-decoration: line-through;
 }
+
+img {
+  image-rendering: pixelated;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
+}
