--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,192 +1,121 @@
 $font-family: 'VT323', monospace;
 
-.app-container {
+.container {
+  font-family: $font-family;
+
   background-color: white;
   width: 100%;
   height: 100%;
   margin: auto;
   max-width: 768px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  display: flex;
-  flex-flow: column;
-
-  .mat-button {
-    position: absolute;
-    padding: 0;
-
-    .mat-button-wrapper {
-      width: 100%;
-      height: 100%;
-    }
-  }
+  display: grid;
+  grid-template-columns: 100px auto 100px;
+  grid-template-rows: 100px auto 100px;
+  grid-template-areas:
+    "mute header ."
+    "main main main"
+    "players start settings";
 }
 
-.title-container {
-  height: 12vh;
+.title {
+  grid-area: header;
+  justify-self: center;
+  align-self: center;
 
   span {
     font-size: 7vh;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
   }
-
-  .mute-button {
-    min-width: 0;
-    width: 8vh;
-    height: auto;
-    position: relative;
-    top: 2vh;
-    left: 2vh;
-
-    img {
-      height: 100%;
-      width: 100%;
-
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-    }
-  }
-}
-
-.mat-button {
-  text-align: unset;
 }
 
 .character-list {
-  width: 100%;
-  flex: 1 1 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
+  grid-area: main;
 
-  .character-row {
-    min-height: 20px;
-    flex: 1 1 0;
-    position: relative;
-  }
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: repeat(8, 1fr);
+}
 
-  .good {
-    border-left: 15px solid lightskyblue;
-  }
+.character-row {
+  display: grid;
 
-  .evil {
-    border-left: 15px solid pink;
-  }
+  grid-template-columns: 100px auto 100px;
+  grid-template-rows: 100%;
+  grid-template-areas: "left main right";
 
   .portrait {
-    margin-right: 15px;
-    min-height: 20px;
-    height: 100%;
-    width: auto;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
+    grid-area: left;
+    height: 90%;
+    align-self: center;
+    justify-self: center;
   }
-
   .name {
-    font-family: $font-family;
+    grid-area: main;
+    align-self: center;
     font-size: 30px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
   }
 
   .number {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 15px;
-    font-family: $font-family;
+    grid-area: right;
+    align-self: center;
+    justify-self: center;
     font-size: 50px;
   }
 
   .enabled {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 15px;
-    min-height: 20px;
-    height: 40%;
-    width: auto;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
+    grid-area: right;
+    align-self: center;
+    justify-self: center;
+    height: 60%;
   }
 }
-
-.footer-menu {
-  height: 14vh;
+.character-row.evil {
+  border-left: 8px #B62F31 solid;
+}
+.character-row.good {
+  border-left: 8px #447CCF solid;
 }
 
-.player-button {
-  min-width: 0;
-  width: 10vh;
-  height: auto;
-  position: absolute;
-  bottom: 2vh;
-  left: 2vh;
-
-  .player-button-image {
-    height: 100%;
-    width: 100%;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
-  }
-
-  .player-button-text {
-    font-family: $font-family;
-    font-size: 8vh;
-    position: absolute;
-    left: 48%;
-    top: 42%;
-    margin: 0;
-    transform: translate(-50%, -50%);
-  }
-}
-
-.play-button {
-  min-width: 0;
-  width: 25vh;
-  height: auto;
-  position: absolute;
-  bottom: 2vh;
-  left: 50%;
-  transform: translate(-50%, 0);
-
+.mute-button {
+  grid-area: mute;
+  padding: 10px;
   img {
     height: 100%;
     width: 100%;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
+  }
+}
+.player-button {
+  grid-area: players;
+  padding: 10px;
+  display: grid;
+  grid-template:
+    [row1-start] "main" auto [row1-end]
+    / auto;
+  img {
+    grid-area: main;
+    height: 100%;
+  }
+  span {
+    grid-area: main;
+    justify-self: center;
+    align-self: center;
+    font-size: 8vh;
+  }
+}
+.play-button {
+  grid-area: start;
+  justify-self: center;
+  align-self: center;
+  height: 80%;
+  img {
+    height: 100%;
   }
 }
 
 .settings-button {
-  min-width: 0;
-  width: 10vh;
-  height: auto;
-  position: absolute;
-  bottom: 2vh;
-  right: 2vh;
-
+  grid-area: settings;
+  justify-self: center;
+  padding: 10px;
   img {
     height: 100%;
-    width: 100%;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
   }
 }
