--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -1,131 +1,90 @@
 $font-family: 'VT323', monospace;
 
-.app-container {
+.container {
+  font-family: $font-family;
+
   background-color: white;
   width: 100%;
   height: 100%;
   margin: auto;
   max-width: 768px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-  display: flex;
-  flex-flow: column;
-
-  .mat-button {
-    position: absolute;
-    padding: 0;
-    text-align: unset;
-
-    .mat-button-wrapper {
-      width: 100%;
-      height: 100%;
-    }
-  }
+  display: grid;
+  grid-template-columns: 100px auto 100px;
+  grid-template-rows: 100px auto 100px;
+  grid-template-areas:
+    "mute header ."
+    "main main main"
+    "stop . pause";
 }
 
-.title-container {
-  height: 100px;
+.title {
+  grid-area: header;
+  justify-self: center;
+  align-self: center;
 
   span {
-    font-size: 50px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-
-  .mute-button {
-    min-width: 0;
-    width: 8vh;
-    height: auto;
-    position: relative;
-    top: 10px;
-    left: 10px;
-
-    img {
-      height: 100%;
-      width: 100%;
-
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-    }
+    font-size: 7vh;
   }
 }
+.centre-card {
+  grid-area: main;
+  margin: auto;
+  width: 80%;
+  height: 20vh;
 
-.centre-container {
-  width: 100%;
-  flex: 1 1 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: stretch;
-
-  .center-card {
-    margin: auto;
-    width: 80%;
+  img {
+    display: block;
+    min-width: 0;
     height: 20vh;
+    width: auto;
+    margin: auto;
+    margin-bottom: 20px;
 
-    img {
-      display: block;
-      min-width: 0;
-      height: 20vh;
-      width: auto;
-      margin: auto;
-      margin-bottom: 20px;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
+  }
 
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-    }
-
-    span {
-      display: block;
-      margin: auto;
-      text-align: center;
-      width: 80%;
-      font-size: 40px;
-    }
+  span {
+    display: block;
+    margin: auto;
+    text-align: center;
+    width: 80%;
+    font-size: 40px;
   }
 }
 
-.footer-menu {
-  height: 150px;
-
-  .stop-button {
-    min-width: 0;
-    width: 8vh;
-    height: auto;
-    position: absolute;
-    bottom: 25px;
-    left: 25px;
-
-    img {
-      height: 100%;
-      width: 100%;
-
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-    }
+.mute-button {
+  grid-area: mute;
+  padding: 10px;
+  img {
+    height: 100%;
+    width: 100%;
   }
-
-  .pause-button {
-    min-width: 0;
-    width: 8vh;
-    height: auto;
-    position: absolute;
-    bottom: 25px;
-    right: 25px;
-
-    img {
-      height: 100%;
-      width: 100%;
-
-      image-rendering: pixelated;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: crisp-edges;
-    }
+}
+.stop-button {
+  grid-area: stop;
+  padding: 10px;
+  display: grid;
+  grid-template:
+    [row1-start] "main" auto [row1-end]
+    / auto;
+  img {
+    grid-area: main;
+    height: 100%;
+  }
+  span {
+    grid-area: main;
+    justify-self: center;
+    align-self: center;
+    font-size: 8vh;
+  }
+}
+.pause-button {
+  grid-area: pause;
+  justify-self: center;
+  padding: 10px;
+  img {
+    height: 100%;
   }
 }
