--- a/src/app/player-dialog/player-dialog.component.scss
+++ b/src/app/player-dialog/player-dialog.component.scss
@@ -1,43 +1,28 @@
 $font-family: 'VT323', monospace;
 
-.dialog-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.dialog {
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px;
+  grid-template-areas:
+    ". . .";
+}
 
-  .arrow {
-    .mat-button {
-      padding: 0;
-      margin: 0;
-      height: 100%;
-      width: auto;
-
-      .mat-button-wrapper {
-        width: 100%;
-        height: 100%;
-      }
-
-      img {
-        height: 100%;
-        width: auto;
-      }
-    }
+.button {
+  height: 80%;
+  justify-self: center;
+  align-self: center;
+  img {
+    height: 100%;
   }
+}
 
-  .number {
-    .mat-button {
-      height: 100px;
-      width: 100px;
-
-      span {
-        font-family: $font-family;
-        display: inline-block;
-        vertical-align: middle;
-        line-height: 90px;
-        text-align: center;
-        font-size: 70px;
-      }
-    }
+.number {
+  justify-self: center;
+  align-self: center;
+  span {
+    font-family: $font-family;
+    font-size: 70px;
   }
 }
