--- a/src/app/settings-dialog/settings-dialog.component.html
+++ b/src/app/settings-dialog/settings-dialog.component.html
@@ -1,27 +1,29 @@
 <div class="dialog">
   <a class="row" (click)="changeAnnouncer('en-gb-C')">
-    <img src="assets/characters/merlin.png">
-    <span>Announcer: Synth Male</span>
-    <img
+    <img class="row-image" src="assets/settings/en-gb-C-icon.png">
+    <span class="row-text">Announcer: Synth Female</span>
+    <img class="row-enabled"
       [src]="settings.announcer == 'en-gb-C' ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
   </a>
   <a class="row" (click)="changeAnnouncer('en-gb-D')">
-    <img src="assets/characters/merlin.png">
-    <span>Announcer: Synth Female</span>
-    <img
+    <img class="row-image" src="assets/settings/en-gb-D-icon.png">
+    <span class="row-text">Announcer: Synth Male</span>
+    <img class="row-enabled"
       [src]="settings.announcer == 'en-gb-D' ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
   </a>
   <a class="row" (click)="verbose()">
-    <img src="assets/characters/merlin.png">
-    <span>Verbose</span>
-    <img [src]="settings.verbose ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
+    <img class="row-image" src="assets/settings/question.png">
+    <span class="row-text">Verbose</span>
+    <img class="row-enabled"
+      [src]="settings.verbose ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
   </a>
   <a class="row" (click)="flair()">
-    <img src="assets/characters/merlin.png">
-    <span>Unnecessary Flair</span>
-    <img [src]="settings.flair ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
+    <img class="row-image" src="assets/settings/duck.png">
+    <span class="row-text">Unnecessary Flair</span>
+    <img class="row-enabled"
+      [src]="settings.flair ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'">
   </a>
   <a class="close" (click)="close()">
-    <img src="assets/characters/merlin.png">
+    <img src="assets/buttons/okay.png">
   </a>
 </div>
