--- a/src/app/settings-dialog/settings-dialog.component.scss
+++ b/src/app/settings-dialog/settings-dialog.component.scss
@@ -3,13 +3,34 @@ $font-family: 'VT323', monospace;
 .dialog {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: repeat(4, 60px) 40px;
+  grid-template-rows: repeat(4, 60px) 60px;
+
+  font-size: 30px;
 }
 .row {
   display: grid;
-  grid-template-columns: 100px auto 100px;
+  grid-template-columns: 60px auto 60px;
   grid-template-rows: auto;
 }
-.close {
+.row-image {
+  height: 90%;
+  align-self: center;
   justify-self: center;
+}
+.row-text {
+  align-self: center;
+  font-size: 30px;
+}
+.row-enabled {
+  height: 60%;
+  align-self: center;
+  justify-self: center;
+}
+.close {
+  height: 100%;
+  align-self: center;
+  justify-self: center;
+  img {
+    height: 100%;
+  }
 }
