--- a/src/app/player-dialog/player-dialog.component.html
+++ b/src/app/player-dialog/player-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="dialog">
   <div class="button">
     <a (click)="down()">
-      <img src="assets/buttons/left-arrow.png" />
+      <img src="assets/buttons/left-arrow.png">
     </a>
   </div>
   <div class="number">
@@ -9,7 +9,7 @@
   </div>
   <div class="button">
     <a (click)="up()">
-      <img src="assets/buttons/right-arrow.png" />
+      <img src="assets/buttons/right-arrow.png">
     </a>
   </div>
 </div>
