--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,19 +1,19 @@
 <div class="container">
   <a (click)="muteButton()" class="mute-button">
-    <img [src]="settings.mute ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'" />
+    <img [src]="settings.mute ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'">
   </a>
   <div class="title">
     <span>Play Page</span>
   </div>
   <div class="centre-card">
-    <img [src]="cardImage" />
+    <img [src]="cardImage">
     <span>{{ cardText }}</span>
   </div>
 
   <a (click)="stop()" class="stop-button">
-    <img src="assets/buttons/home.png" />
+    <img src="assets/buttons/home.png">
   </a>
   <a (click)="pause()" class="pause-button">
-    <img [src]="paused ? 'assets/buttons/sound-play.png' : 'assets/buttons/sound-pause.png'" />
+    <img [src]="paused ? 'assets/buttons/sound-play.png' : 'assets/buttons/sound-pause.png'">
   </a>
 </div>
