Add information dialog

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
     <span>Avalon Announcer</span>
   </div>
   <a (click)="openInfoDialog()" class="info-button">
-    <img src="assets/buttons/sound-off.png">
+    <img src="assets/buttons/info.png">
   </a>
   <div class="character-list">
     <a class="character-row good">
