Add information links

--- a/src/app/info-dialog/info-dialog.component.html
+++ b/src/app/info-dialog/info-dialog.component.html
@@ -1,7 +1,18 @@
 <div class="dialog">
   <div class="main">
     <p>
-      Nice
+      Created by: <a href="https://imperialoctopus.github.io/">Zoey Child</a><br>
+      Special thanks: <a href="https://gcbgc.soc.srcf.net/" target="_blank">GCBGC</a>
+    </p>
+    <p>
+      <a href="https://upload.snakesandlattes.com/rules/r/ResistanceAvalon.pdf" target="_blank">
+        Game rules
+      </a>
+    </p>
+    <p>
+      <a href="https://github.com/ImperialOctopus/avalon-app" target="_blank">
+        This project on GitHub
+      </a>
     </p>
   </div>
   <a class="close" (click)="close()">
