Fix production undefined error

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -54,7 +54,7 @@
   </div>
   <a (click)="openPlayerDialog()" class="player-button">
     <img src="assets/buttons/player-dialog.png">
-    <span>{{ settings.playerNumber }}</span>
+    <span>{{ settings?.playerNumber }}</span>
   </a>
   <a (click)="play()" class="play-button">
     <img src="assets/buttons/start.png">
