--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -45,7 +45,7 @@ $font-family: 'VT323', monospace;
   display: grid;
 
   grid-template-columns: 100px auto 100px;
-  grid-template-rows: 100%;
+  grid-template-rows: auto;
   grid-template-areas: "left main right";
 
   .portrait {
