--- a/src/app/play/play.component.scss
+++ b/src/app/play/play.component.scss
@@ -22,34 +22,30 @@ $font-family: 'VT323', monospace;
   justify-self: center;
   align-self: center;
 
-  span {
-    font-size: 7vh;
+  h1 {
+    text-align: center;
+    font-weight: normal;
+    font-size: 4rem;
   }
 }
 .centre-card {
   grid-area: main;
-  margin: auto;
-  width: 80%;
-  height: 20vh;
+  justify-self: center;
+  align-self: center;
+  height: 100%;
+  max-height: 250px;
+  width: 100%;
+  max-width: 250px;
 
   img {
-    display: block;
-    min-width: 0;
-    height: 20vh;
-    width: auto;
+    width: 100%;
     margin: auto;
     margin-bottom: 20px;
-
-    image-rendering: pixelated;
-    image-rendering: -moz-crisp-edges;
-    image-rendering: crisp-edges;
   }
 
-  span {
-    display: block;
-    margin: auto;
+  p {
     text-align: center;
-    width: 80%;
+    width: 100%;
     font-size: 40px;
   }
 }
