Add links to printable game

--- a/src/app/info-dialog/info-dialog.component.html
+++ b/src/app/info-dialog/info-dialog.component.html
@@ -5,9 +5,15 @@
       Special thanks: <a href="https://gcbgc.soc.srcf.net/" target="_blank">GCBGC</a>
     </p>
     <p>
-      <a href="https://upload.snakesandlattes.com/rules/r/ResistanceAvalon.pdf" target="_blank">
-        Game rules
+      <a href="https://github.com/ImperialOctopus/avalon-printable/releases/tag/v1.0.0" target="_blank">
+        Printable game board and cards
       </a>
+    </p>
+    <p>
+      <a href="https://upload.snakesandlattes.com/rules/r/ResistanceAvalon.pdf" target="_blank">
+        Game rules (external)
+      </a>
+      <br>Provided by Snakes & Lattes
     </p>
     <p>
       <a href="https://github.com/ImperialOctopus/avalon-app" target="_blank">
