Clean up menu css

--- a/lib/src/pages/menu/menu_component.scss
+++ b/lib/src/pages/menu/menu_component.scss
@@ -99,7 +99,7 @@
   padding: 10px;
   display: grid;
   grid-template:
-    [row1-start] "main" auto [row1-end]
+    "main" auto
     / auto;
   img {
     grid-area: main;
@@ -128,27 +128,5 @@
   padding: 10px;
   img {
     height: 100%;
-  }
-}
-
-.info-dialog {
-  @include material-dialog-fullscreen($mat-grid * 100, $mat-grid * 80);
-
-  &.fullscreen-mode {
-    @include material-dialog-header-padding($mat-grid $mat-grid * 2);
-
-    [header] {
-      align-items: center;
-      display: flex;
-
-      material-button {
-        color: $mat-white;
-        margin-right: $mat-grid * 2;
-      }
-
-      h1 {
-        margin: $mat-grid-type / 2 0 0;
-      }
-    }
   }
 }
