--- a/lib/src/pages/play/play_component.scss
+++ b/lib/src/pages/play/play_component.scss
@@ -1,8 +1,4 @@
-$font-family: "VT323", monospace;
-
 .container {
-  font-family: $font-family;
-
   background-color: white;
   width: 100%;
   height: 100%;
@@ -63,7 +59,7 @@ $font-family: "VT323", monospace;
   padding: 10px;
   display: grid;
   grid-template:
-    [row1-start] "main" auto [row1-end]
+    "main" auto
     / auto;
   img {
     grid-area: main;
